<resources>
    <string name="app_name">Arduino Serial Monitor</string>
    <string name="start_button">Start monitoring</string>
    <string name="stop_button">Stop monitoring</string>
    <string name="select_baud">Select baud rate:</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="save_button">Save To File</string>
    <string name="load_button">Load From File</string>
    <string name="baud_9600">9600</string>
    <string name="baud_57600">57600</string>
    <string name="baud_115200">115200</string>
    <string name="baud_230400">230400</string>
    <string name="baud_250000">250000</string>
    <string name="sampling_freq">Your sampling frequency:</string>
    <string name="hint">1 Hz</string>
    <string name="confirm">CONFIRM</string>
    <string name="check1">Channel 1</string>
    <string name="check2">Channel 2</string>
    <string name="check3">Channel 3</string>
    <string name="info">INFORMATION!</string>
    <string name="alert_title">Information</string>
    <string name="graph_type">Select Graph Type</string>
    <string name="pointed">Pointed Graph</string>
    <string name="line">Line Graph</string>
    <string name="prefs_name">MyPrefsFile1</string>
    <string name="file_name">data.txt</string>
    <string name="usb_detached">USB device detached</string>
    <string name="skip_msg">skipMessage</string>
    <string name="not_checked">NOT checked</string>
    <string name="checked">checked</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="dialog_text">Do not show me again</string>
    <string name="start_dialog_text">Before the first use, please read the info about the program.
        This description will be available later in the menu.</string>
    <string name="info_text">This application is designed for monitoring Arduino signals.
        Before using it, please read the following description: \n
        First, connect your Arduino to your device via an OTG cable.
        After granting the permission, the application starts.
        First, select the appropriate baud rate from the menu.
        The default is 115200. You can also adjust the appearance of the graph in the menu.
        For monitoring purposes, you must first specify the transmit frequency in Hz.
        You can then connect to Arduino using the CONNECT button.
        The START/STOP MONITORING button is used to start or stop monitoring the signals.
        The save and load functions can only be used when the signals are not being monitored.
        Before loading, you may want to look at formatting a saved file.
        The application can only read files formatted in this way with as data.txt.
        The path is displayed when you save.</string>
    <string name="freq_toast">Frequency field is empty!</string>
    <string name="channels">Channel 1 X:, Channel 1 Y:, Channel 2 X:, Channel 2 Y:,
        Channel 3 X:, Channel 3 Y:</string>
    <string name="saved">Saved to </string>
    <string name="ext_storage_err">Cannot write to External Storage</string>
    <string name="data">Data: </string>
    <string name="device_found">Device found:  </string>
    <string name="usb_connection_error">Could not start USB connection - No devices found</string>
    <string name="usb_ready">Ready to open USB device connection</string>
    <string name="serial_opened">Serial connection opened</string>
    <string name="serial_error">Cannot open serial connection</string>
    <string name="usb_serial_error">Could not create Usb Serial Device</string>
</resources>
